tests/negative/type_mismatch_binop.sans
// expect-error: undefined
main() I {
  x = "hello" + 42
  0
}
